pin material deps

--- a/package.json
+++ b/package.json
@@ -57,10 +57,11 @@
     "@dojo/scripts": "^4.0.2",
     "@dojo/themes": "^6.0.0",
     "@theintern/a11y": "~0.2.0",
-    "@material/button": "^2.1.1",
-    "@material/checkbox": "^4.0.0",
-    "@material/radio": "^3.2.0",
-    "@material/tab": "^4.0.0",
+    "@material/button": "2.1.1",
+    "@material/chips": "4.0.0",
+    "@material/checkbox": "4.0.0",
+    "@material/radio": "3.2.0",
+    "@material/tab": "4.0.0",
     "@types/execa": "^0.8.1",
     "@types/glob": "5.0.36",
     "@types/grunt": "0.4.*",
